[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/wallpaperfreeway.png" type="Texture" id=1]
[ext_resource path="res://player/Player2.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/Ganha.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/Main.gd" type="Script" id=5]
[ext_resource path="res://assets/PressStart2P-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/sons/ponto.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sons/ganhou.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sons/tema.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 6 )

[node name="Main" type="Node"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Ganha" parent="." instance=ExtResource( 3 )]
position = Vector2( 638.66, 64 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 320, 696 )

[node name="Player2" parent="." instance=ExtResource( 2 )]
position = Vector2( 944, 696 )

[node name="TimerCarroRapido" type="Timer" parent="."]
autostart = true

[node name="TimerCarroLento" type="Timer" parent="."]
autostart = true

[node name="placar1" type="Label" parent="."]
margin_left = 300.0
margin_top = 10.0
margin_right = 320.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="placar2" type="Label" parent="."]
margin_left = 920.0
margin_top = 10.0
margin_right = 944.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resultado" type="Label" parent="."]
margin_top = 10.0
margin_right = 1280.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ponto" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="ganhou" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="tema" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -18.0

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -40.0
margin_right = 150.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Reiniciar"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pontua" from="Player" to="." method="_on_Player_pontua"]
[connection signal="pontua2" from="Player2" to="." method="_on_Player2_pontua2"]
[connection signal="timeout" from="TimerCarroRapido" to="." method="_on_TimerCarroRapido_timeout"]
[connection signal="timeout" from="TimerCarroLento" to="." method="_on_TimerCarroLento_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
